--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,12 +3,12 @@
 name: msm-Build
 
 # Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
+# events but only for the bibarub/custom branch
 on:
   push:
-    branches: [master]
+    branches: [bibarub/custom]
   pull_request:
-    branches: [master]
+    branches: [bibarub/custom]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
